[project]
name = "robot-motion-plannig"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.11.0",
    "isort>=7.0.0",
    "matplotlib>=3.10.7",
    "numba>=0.62.1",
    "numpy>=2.3.5",
    "pin>=3.8.0",
    "pybullet>=3.2.7",
    "sympy>=1.14.0",
]
